--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="我的小可爱"
     />
-    <title>我的小可爱222</title>
+    <title>我的小可爱</title>
   </head>
   <body>
     <div id="root"></div>
